@@ -31,6 +31,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.stream.DoubleStream;
@@ -353,17 +354,17 @@ public class SimpleExampleInterCloud {
 		}
 	}
 
-	public static void xml2Json(String path) throws IOException {
-		String xml = Files.readString(Path.of(path));
-		JSONObject xmlJSONObj = XML.toJSONObject(xml);
-		//设置缩进
-		String jsonPrettyPrintString = xmlJSONObj.toString(4);
-		//保存格式化后的json
-		FileWriter writer = new FileWriter("InputOutput/exampleWrite.json");
-		writer.write(jsonPrettyPrintString);
-		writer.close();
-//		System.out.println(jsonPrettyPrintString);
-	}
+//	public static void xml2Json(String path) throws IOException {
+//		String xml = Files.lines(Paths.get(input_topo)).reduce("", String::concat);//Files.readString(Path.of(path));
+//		JSONObject xmlJSONObj = XML.toJSONObject(xml);
+//		//设置缩进
+//		String jsonPrettyPrintString = xmlJSONObj.toString(4);
+//		//保存格式化后的json
+//		FileWriter writer = new FileWriter("InputOutput/exampleWrite.json");
+//		writer.write(jsonPrettyPrintString);
+//		writer.close();
+////		System.out.println(jsonPrettyPrintString);
+//	}
 
 	/// Under development
 	/*
